# spanishpear.github.io

./: Cargo.toml  README.md  Trunk.toml  ]  index.html  package.json  tailwind.config.js  webpack.config.js  website-5cb7b64b4e502e2.js  website-5cb7b64b4e502e2_bg.wasm
.github/workflows/: publish_gh_pages.yml  rust-build.yml
assets/: tailwind.css
crates/website/: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  tailwind.config.js
crates/website/src/: macros.rs  main.rs
crates/website/src/blogs/: mod.rs
crates/website/src/components/: background.rs  gradient_background.rs  headline.rs  link_button.rs  mod.rs  navbar.rs  post_card.rs  recent_posts.rs
crates/website/src/fetch/: mod.rs
crates/website/src/pages/: all_posts.rs  construction.rs  home.rs  mod.rs  not_found.rs  post.rs
crates/yew-markdown/: Cargo.toml
crates/yew-markdown/src/: lib.rs
posts/: graduating.md  making_a_prettier_terminal.md  smart_pointers.md
src/: main.rs  utils.rs
src/blogs/: mod.rs  prettier_terminal.rs
src/components/: background.rs  headline.rs  link_button.rs  mod.rs  navbar.rs  post_card.rs  recent_posts.rs
src/pages/: construction.rs  mod.rs  post.rs
