[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-utils = "0.1.4"
log = "0.4.16"
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.32"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.59", features = ["Response", "Request", "Window", "RequestInit", "RequestMode"] } 
yew = "0.19.3"
yew-hooks = "0.1.56"
yew-router = "0.16"
